--- a/views/acdtest.ejs
+++ b/views/acdtest.ejs
@@ -79,7 +79,7 @@
 					if(hours < 0 && minutes < 0 && seconds < 0){
 						new swal({
 							title: 'Time is up!',
-							text: 'Thankyou for attending'
+							text: 'You can close this browser tab Thanks for attending !'
 						})
 						document.getElementById("body").innerHTML = '';					
 					}
