--- a/views/acdtest.ejs
+++ b/views/acdtest.ejs
@@ -297,7 +297,7 @@
 			R1=R2=10MΩ, 
 			RD=Rs=6kΩ, 
 			Vt(threshold)=1V, 
-			µn Cox (w/L) =1mA/V2<br><br>
+			µ<sub>n</sub> Cox (w/L) =1mA/V<sup>2</sup><br><br>
 			Specifications: <br>
 			&ensp;• Use nmos4 instead of inbuilt MOSFET nmos<br>
 			&ensp;• Name the nmos4 MOSFET as N_1u<br>
