--- a/views/acdrules.ejs
+++ b/views/acdrules.ejs
@@ -152,7 +152,7 @@
 
 			<form>
 				<div class="form-check">
-					<input class="form-check-input" type="checkbox" value="Y" id="defaultCheck1" style="font-size: large;" required>
+					<input class="form-check-input" type="checkbox" value="Y" id="defaultCheck1" style="font-size: large;" required disabled>
 					<label class="form-check-label" for="defaultCheck1" style="font-size: large;">
 					  I hereby, read all the Instructions.
 					</label>
