--- a/views/acdrules.ejs
+++ b/views/acdrules.ejs
@@ -152,15 +152,15 @@
 
 			<form>
 				<div class="form-check">
-					<input class="form-check-input" type="checkbox" value="Y" id="defaultCheck1" style="font-size: large;" required disabled>
+					<input class="form-check-input" type="checkbox" value="Y" id="defaultCheck1" style="font-size: large;" required>
 					<label class="form-check-label" for="defaultCheck1" style="font-size: large;">
 					  I hereby, read all the Instructions.
 					</label>
 				</div>
 				<br>
-				<button type="submit" style="display:block; margin:auto;" id="submit" class="btn btn-dark">Proceed to Exam </button>
+				<!-- <button type="submit" style="display:block; margin:auto;" id="submit" class="btn btn-dark">Proceed to Exam </button> -->
 			</form>	
-			<script>
+			<!-- <script>
 				$("form").submit(function(e) {
 				  e.preventDefault(); 
 				  console.log('start exam');
@@ -186,7 +186,7 @@
 						});
 					})				  
 				});
-			</script>
+			</script> -->
 		</div>
 	</div>
 
