--- a/views/acdrules.ejs
+++ b/views/acdrules.ejs
@@ -158,7 +158,7 @@
 					</label>
 				</div>
 				<br>
-				<button type="submit" style="display:block; margin:auto;" id="submit" class="btn btn-dark">Not Started</button>
+				<button  style="display:block; margin:auto;" id="submit" class="btn btn-dark">Not Started</button>
 			</form>	
 			<!-- <script>
 				$("form").submit(function(e) {
