--- a/views/acdrules.ejs
+++ b/views/acdrules.ejs
@@ -158,7 +158,9 @@
 					</label>
 				</div>
 				<br>
-				<button  style="display:block; margin:auto;" id="submit" class="btn btn-dark">Not Started</button>
+				<!-- <button type="submit" style="display:block; margin:auto;" id="submit" class="btn btn-dark">Proceed to the exam</button> -->
+
+				<button style="display:block; margin:auto;" class="btn btn-danger">Not Started</button>
 			</form>	
 			<!-- <script>
 				$("form").submit(function(e) {
