--- a/views/mologin.ejs
+++ b/views/mologin.ejs
@@ -1,13 +1,16 @@
 <html>
 <head>
-	<title>Analog Circuit Design | Wissenaire’21</title>
+	<title>Maths Olympiad | Wissenaire’21</title>
 	<meta content="width=device-width, initial-scale=1" name="viewport" />
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">	
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.2.0/mdb.min.css" rel="stylesheet"/>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet"/>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.2.0/mdb.min.js"></script>
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
   	<link href="../stylesheets/icofont/icofont.min.css" rel="stylesheet">
     <link href="../stylesheets/navbar.css" rel="stylesheet">
 	<link href="../stylesheets/profile.css" rel="stylesheet">
@@ -15,16 +18,6 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 	<link rel="icon" type="image/png"  href="../images/logo-mini.png" type="image/x-icon">
   <style>
-	p{
-		padding: 10px;
-		margin: 0px;
-	}
-	form{
-		padding-top: 10px;
-	}
-	.row>* {
-		padding-left: auto  !important;
-	}
 	  .page-navigation-menu >ul >li >a >i{
     color:black;
     font-size:8rem !important;
@@ -47,15 +40,19 @@
     text-decoration: none;
   }
 
+  input[type="email"], input[type="number"], input[type="search"], input[type="text"], input[type="tel"], input[type="url"], input[type="password"], textarea, select {
+	background-color: var(--color-gray-17) !important;
+}
+
 
   </style>
 </head>
 
 <body>
 	<!-- <div id="preloader" style="width: 100vw; height: 100vh; z-index: 10000; background: black;">
-		<img src="../images/preloader1.gif" id="loader" style="width: 100vw; background:black;">
+		<img src="./images/preloader1.gif" id="loader" style="width: 100vw; background:black;">
 	</div> -->
-    <header style="height: 1vh !important;" class="hidden">
+	<header style="height: 1vh !important;" class="hidden">
 		<div id="navigation" class="">
 			<a class="menu-toggle">
 				<div class="btn-toggle">
@@ -123,76 +120,69 @@
 	  </div>
 	</header>
 
-	<div class="container" style="margin-top: 100px; color: white;">
-		<div class="container row">
-			<h2 align="center" style="margin-bottom: 25px;">Analog Circuit Design</h2>
-			<p style="display: inline; width: 50%;" align="left">Max Score: 100 points</p>
-			<p style="display: inline; width: 50%;" align="right">Test Duration: 150 min</p>
-			<p><span style="text-decoration: underline;">Instructions</span> :</p> 
-			<p> •  Answer all the questions.</p>
-			<p> •  Answer all parts of a question together.</p>
-			<p> •  No question number before any solution will not be considered for
-				evaluation.</p>
-			<p> •  There will be no negative marking.</p>
-			<p> •  Marking scheme for each part of every question is specified at end
-				of the question.</p>
-			<p> •  Answer very concisely for the theory questions.</p>
-			<p> •  In the schematic diagram of Lt-spice please write you Name before
-				you took screenshot and attach in the final report.</p>
-			<p> •  All the simulation graphs should be taken on a white background in
-				Lt-spice. Do not use black background while taking screenshots of
-				graphs at all.</p>
-			<p> •  In the circuit diagram please label all the required nodes.</p>
-			<p> •  Always plot different quantities of a question in different pane.</p>
-			<p> •  Please utilize the time properly. No extra time is provided and no
-				one is allowed to appear for the exam again.</p>
-			<p> •  You need to compile the solution of a question into a pdf (only pdf format is allowed) and upload it as a whole for each of the questions. </p>
-			<p> • Make sure you check all the submitted answers before ending the test</p>
+    <section class="container" style="display: block; margin: auto; margin-top: 100px;">
+        <h3 align="center" style="color: white;">Maths Olympiad</h3>
+		<form style="width: 100%;">
+			<div class="form-group column large-8" style="margin:auto;">
+				<label>Wissenaire ID </label>
+				<input type="text" class="form-control" name="username" placeholder="Use the id used while registration" required>
+			</div>
+			<div class="form-group column large-8"  style="margin:auto;">
+				<label>Mobile Number</label>
+				<input type="password" class="form-control" name="password" placeholder="Use the mobile number used while registration" required>
+			</div>
+
+			
+			<button type="submit" style="display:block; margin:auto;" id="submit" class="btn btn-dark">Proceed to Exam </button>
+		  </form>
+		  <script>
+			$("form").submit(function(e) {
+			  e.preventDefault(); 
+			  var form = $(this);
+			  $.ajax({
+				  type: "POST",
+				  url: '/maths/login',
+				  data: form.serialize(), 
+				  success: function(result)
+				  {
+					  if(result === 'Invalid Credentials'){
+						  new swal({
+							  title: 'Invalid Credentials',
+							  text: result,
+							  icon: 'error'
+						  })
+					  }
+					  else if (result == 'You are all set'){
+						  new swal({
+							  title: 'All the Best !',
+							  text: result,
+							  icon: 'success'
+						  }).then((value)=>{
+							 window.location.href = '/maths/rules'; 
+						  })
+					  }
+					  else if(result == 'Already Logged in'){
+						new swal({
+							  title: 'Already Logged in',
+							  text: result,
+							  icon: 'error'
+						  }).then((values)=>{
+								new swal({
+									title: 'Resume Test ?',
+									text: 'You are running out of time',
+								}).then((value)=>{
+									window.location.href = '/maths/rules';
+								})
+						  })
+					  }
+				  }
+				  });
+			  });
+		</script>
+    </section>
 
 
-			<form>
-				<div class="form-check">
-					<input class="form-check-input" type="checkbox" value="Y" id="defaultCheck1" style="font-size: large;" required>
-					<label class="form-check-label" for="defaultCheck1" style="font-size: large;">
-					  I hereby, read all the Instructions.
-					</label>
-				</div>
-				<br>
-				<button type="submit" style="display:block; margin:auto;" id="submit" class="btn btn-dark">Proceed to the exam</button>
-
-				<!-- <button style="display:block; margin:auto;" class="btn btn-danger">Not Started</button> -->
-			</form>	
-			<script>
-				$("form").submit(function(e) {
-				  e.preventDefault(); 
-				  console.log('start exam');
-				  new swal({
-					  title : 'Your time Starts Now !',
-					  text: 'All the Best'
-				  })
-					.then((values)=>{
-						var t = Date.now();
-						$.ajax({
-							type: "POST",
-							url: '/acd/notetime',
-							data: {
-								time: t,
-								wissid: '<%=id%>'
-							}, 
-							success: function(result)
-							{
-								if(result == 'success'){
-									window.location.href= '/acd/test';
-								}								
-							}
-						});
-					})				  
-				});
-			</script>
-		</div>
-	</div>
-
-  <!-- <script type="text/javascript" src="../javascripts/canvas.js"></script>   -->
+  <!-- <script type="text/javascript" src="./javascripts/canvas.js"></script>   -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
   <script src="../javascripts/jquery.min.js"></script>
 
