--- a/views/morules2.ejs
+++ b/views/morules2.ejs
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Analog Circuit Design | Wissenaire’21</title>
+	<title>Maths Olympiad | Wissenaire’21</title>
 	<meta content="width=device-width, initial-scale=1" name="viewport" />
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">	
@@ -125,7 +125,7 @@
 
 	<div class="container" style="margin-top: 100px; color: white;">
 		<div class="container row">
-			<h2 align="center" style="margin-bottom: 25px;">Analog Circuit Design</h2>
+			<h2 align="center" style="margin-bottom: 25px;">Maths Olympiad - Round 2</h2>
 			<p style="display: inline; width: 50%;" align="left">Max Score: 100 points</p>
 			<p style="display: inline; width: 50%;" align="right">Test Duration: 150 min</p>
 			<p><span style="text-decoration: underline;">Instructions</span> :</p> 
@@ -158,11 +158,11 @@
 					</label>
 				</div>
 				<br>
-				<button type="submit" style="display:block; margin:auto;" id="submit" class="btn btn-dark">Proceed to the exam</button>
+				<!-- <button type="submit" style="display:block; margin:auto;" id="submit" class="btn btn-dark">Proceed to the exam</button> -->
 
-				<!-- <button style="display:block; margin:auto;" class="btn btn-danger">Not Started</button> -->
+				<button style="display:block; margin:auto;" class="btn btn-danger">Not Started</button>
 			</form>	
-			<script>
+			<!-- <script>
 				$("form").submit(function(e) {
 				  e.preventDefault(); 
 				  console.log('start exam');
@@ -174,7 +174,7 @@
 						var t = Date.now();
 						$.ajax({
 							type: "POST",
-							url: '/acd/notetime',
+							url: '/maths/notetime',
 							data: {
 								time: t,
 								wissid: '<%=id%>'
@@ -182,13 +182,13 @@
 							success: function(result)
 							{
 								if(result == 'success'){
-									window.location.href= '/acd/test';
+									window.location.href= '/maths/round2'; 
 								}								
 							}
 						});
 					})				  
 				});
-			</script>
+			</script> -->
 		</div>
 	</div>
 
