--- a/views/motest2.ejs
+++ b/views/motest2.ejs
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Analog Circuit Design | Wissenaire’21</title>
+	<title>Maths Olympiad | Wissenaire’21</title>
 	<meta content="width=device-width, initial-scale=1" name="viewport" />
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">	
@@ -38,7 +38,7 @@
 				<i class="icofont-ui-user"></i> &nbsp; <%=id%>
 			</a>
 			<a class="menu-toggle d-none d-lg-block" style="color: white; width: 100%" align="center">
-				<h3>ANALOG CIRCUIT DESIGN</h3>
+				<h3>Maths Olympiad</h3>
 			</a>
 			
 			<div id="block-butterfly-branding" class="site-branding block block-system block-system-branding-block">
@@ -94,34 +94,7 @@
 	<div class="container" id="body" style="color: white; margin-top: 75px; margin-bottom: 25px;">
 		<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
 			<h4>Question No. 1</h4><br>
-			Design a circuit in LT-spice with the following characteristics:<br>
-			&ensp;• It should have 3 ideal Op-Amps.<br>
-			&ensp;• It should be given a single input source (Vin).<br>
-			&ensp;• It should have 3 outputs namely V1 V2 and V3, one at each
-			Op-Amp.<br>
-			&ensp;• V1(jw)/Vin(jw) should be a high-pass response.<br>
-			&ensp;• V2(jw)/Vin(jw) should be a band pass response.<br>
-			&ensp;• V3(jw)/Vin(jw) should be a low-pass response.<br><br>
-			Specifications: <br>
-			&ensp;• You should use only Resistors and capacitors and you are free
-			to choose any value of R and C.<br><br>
-			&ensp;<img src="../images/test1.png" height="300"> &nbsp; Take VCC=+15V and VEE=+15V while doing simulation in Lt-spice as
-			shown above.
-			<br><br>
-			a) Attach the screenshot of the LT-spice schematic diagram of the
-			constructed circuit? (<b>5 points</b>) <br><br>
-			b) Attach the screenshots of all the high pass, low pass and band pass
-			responses by performing a DC sweep simulation? (<b>15 points</b>)<br><br>
-			c)The above-mentioned circuit is one of the filter circuits? Name it?
-			(<b>1Point</b>)? <br><br>
-			d)Write the formula of second order low pass, high pass and band
-			pass responses? (<b>3Points</b>)<br><br>
-			e) Why are the 3dB cut-off frequencies of low-pass response and
-			high-pass response that you obtain from simulation are same?
-			(<b>1Point</b>) <br><br>
-			<b><u>Hint</u></b>: <i>Out of three Op-Amp circuits that you cascade together, two
-			are integrator circuits.</i> <br>
-			<br>
+			
 			<form id="q1" enctype="multipart/form-data">
 				<input id="sub1" type="file"  name="filea">
 				<input type="hidden" name="wissid" value="<%=id%>">
@@ -159,7 +132,7 @@
 
 					$.ajax({
 						type: "POST",
-						url: '/acd/submissiona',
+						url: '/maths/submissiona',
 						data: formData, 
 						cache: false,
 						contentType: false,
@@ -185,39 +158,14 @@
 					});
 				  });
 			</script>
-			<a class="btn btn-primary" type="button" href="../uploads/<%=id%>-1.pdf">Check Uploaded pdf</a>
+			<a class="btn btn-primary" type="button" href="../uploads/maths/<%=id%>-1.pdf">Check Uploaded pdf</a>
 
 		</div>
 		<br><br>
 
 		<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
 			<h4>Question No. 2</h4><br>
-			Using only One Op-Amp, devise a circuit to realize the following
-			function utilizing three voltage inputs (V1, V2 and V3)?<br>
-			<span align="center">V(out)=5V1-3V2-7V3</span>
-			<br><br>
-			Specifications: <br>
-			&ensp;• Use universal Op-Amp(ideal).<br>
-			&ensp;• Take saturation voltages as VCC=+15V and -VEE=-15V.<br>
-			&ensp;• Take feedback resistance (Rf)=21kΩ.<br>
-			&ensp;• Take all the V1, V2 and V3 inputs as sinusoidal sources with
-			frequency 100Hz and amplitudes 5V,3V,4V respectively.<br>
-
-			<br><br>
-			a) Attach the screenshot of the LT-spice schematic diagram of the
-			designed circuit? (<b>4 points</b>) <br><br>
-			b) What are the gains of an inverting amplifier and non-inverting
-			amplifier with source resistance R1 and feedback resistance Rf?
-			(<b>2points</b>) <br><br>
-			c)Attach the screenshot of plot containing V1, V2 and V3 by
-			performing a transient simulation? 
-			 (<b>3Points</b>)<br><br>
-			d) The circuit designed is one of the types of amplifiers? Name it? 
-			(<b>1Point</b>) <br><br>
-			e) Attach the screenshot of plot containing (5V1-3V2-7V3) and V(out)
-			in different pane by performing a transient simulation? (<b>10 points</b>) <br><br>
-			<br>
-			<br>
+			
 			<form id="q2" enctype="multipart/form-data">
 				<input id="sub2" type="file"  name="fileb">
 				<input type="hidden" name="wissid" value="<%=id%>">
@@ -255,7 +203,7 @@
 
 					$.ajax({
 						type: "POST",
-						url: '/acd/submissionb',
+						url: '/maths/submissionb',
 						data: formData, 
 						cache: false,
 						contentType: false,
@@ -282,7 +230,7 @@
 					});
 				  });
 			</script>
-			<a class="btn btn-primary" type="button" href="../uploads/<%=id%>-2.pdf">Check Uploaded pdf</a>
+			<a class="btn btn-primary" type="button" href="../uploads/maths/<%=id%>-2.pdf">Check Uploaded pdf</a>
 
 		</div>
 
@@ -290,39 +238,7 @@
 
 		<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
 			<h4>Question No. 3</h4><br>
-			Consider the NMOS circuit below: <br>
-			&ensp;<img src="../images/test3.png" height="300"> <br>
-			<br><br>
-			Take VDD=10V, 
-			R1=R2=10MΩ, 
-			RD=Rs=6kΩ, 
-			Vt(threshold)=1V, 
-			µ<sub>n</sub> Cox (w/L) =1mA/V<sup>2</sup><br><br>
-			Specifications: <br>
-			&ensp;• Use nmos4 instead of inbuilt MOSFET nmos<br>
-			&ensp;• Name the nmos4 MOSFET as N_1u<br>
-			&ensp;• N_1u details can be provided in Spice directive as shown<br>
-			<span align="center"><b>.MODEL N_1u NMOS LEVEL = 3 </b>&ensp;
-									<b>+ KP = 1000E-6 VTO=1</b></span><br>
-			&ensp;• Length and width of N_1u may be left unspecified<br>
 			
-			Perform the simulation with given specifications and verify whether
-			theoretical results are matching with experimental results.
-			<br><br>
-			a) Solve the above circuit to find V<sub>G</sub>, V<sub>D</sub>, V<sub>s</sub> and I<sub>D</sub> theoretically with
-			the knowledge of working of NMOS? Attach the photocopy of solved
-			problem? (<b>10 points</b>) <br><br>
-			b) Attach the screenshot of schematic consisting designed circuit?
-			(<b>5 points</b>) <br><br>
-			c)Attach the screenshot of voltages and currents obtained by
-			performing DC Op simulation? 
-			 (<b>5 Points</b>)<br><br>
-			d) Why the current through gate of MOSFET is zero? Explain briefly? 
-			(<b>2 Points</b>) <br><br>
-			e) Name the bias employed for the given circuit? (<b>1 point</b>) <br><br>
-			f) What is the significance of threshold voltage in MOSFET? (<b>2 points</b>) 
-			<br>
-			<br>
 			<form id="q3" enctype="multipart/form-data">
 				<input id="sub3" type="file"  name="filec">
 				<input type="hidden" name="wissid" value="<%=id%>">
@@ -360,7 +276,7 @@
 
 					$.ajax({
 						type: "POST",
-						url: '/acd/submissionc',
+						url: '/maths/submissionc',
 						data: formData, 
 						cache: false,
 						contentType: false,
@@ -387,49 +303,14 @@
 					});
 				  });
 			</script>
-			<a class="btn btn-primary" type="button" href="../uploads/<%=id%>-3.pdf">Check Uploaded pdf</a>
+			<a class="btn btn-primary" type="button" href="../uploads/maths/<%=id%>-3.pdf">Check Uploaded pdf</a>
 
 		</div>
 		<br><br>
 
 		<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
 			<h4>Question No. 4</h4><br>
-			Design a common-emitter amplifier shown below with the following characteristics: <br>
-			&ensp;<img src="../images/test4.png" height="300"> <br>
-			<br><br>
-			Specifications: <br>
-			&ensp;• Take V<sub>CC</sub>=24V<br>
-			&ensp;• A<sub>V</sub>(OC)= -100<br>
-			&ensp;• I<sub>C</sub>=4mA<br>
-			&ensp;• V<sub>CE</sub>=12V<br>
-			&ensp;• I<sub>C</sub> (sat)=8mA<br>
-			&ensp;• DC current gain(β)=100<br>
-			&ensp;• Take R<sub>2</sub> ≤ (βR<sub>E</sub>)/10<br>
-
 			
-			Perform the simulation with these specifications given above.
-			<br>While doing the simulation with any model change the value of β to
-			100 from it’s original value by imposing the model data onto spicedirective. Consider VBE=0.7V as diode cut-in voltage for obtaining
-			resistance values.
-			<br><br>
-			a) How you obtain the values of R1 , R2, Rc and RE from the given
-			specifications? Attach the scanned copy of the theoretical solution
-			for this? (<b>10 points</b>) <br><br>
-			b)Attach the screenshot of the LT-spice schematic diagram of the
-			designed circuit?
-			(<b>5 points</b>) <br><br>
-			c)Attach the screenshot of voltages and currents obtained by
-			performing DC Op simulation?  
-			 (<b>5 Points</b>)<br><br>
-			d) How does capacitors behave in DC-operation? 
-			(<b>2 Points</b>) <br><br>
-			e) Comment on the specification given as R2 ≤ (βRE)/10? (<b>3 points</b>) <br><br>
-			f) How do you justify the statement “BJT is operating in active mode”
-			from the simulation results? (<b>2 points</b>) <br><br>
-			g) Draw the frequency response of a CE amplifier and explain why
-			does it look like that? (<b>3 points</b>)
-			<br>
-			<br>
 			<form id="q4" enctype="multipart/form-data">
 				<input id="sub4" type="file"  name="filed">
 				<input type="hidden" name="wissid" value="<%=id%>">
@@ -467,7 +348,7 @@
 
 					$.ajax({
 						type: "POST",
-						url: '/acd/submissiond',
+						url: '/maths/submissiond',
 						data: formData, 
 						cache: false,
 						contentType: false,
@@ -494,7 +375,7 @@
 					});
 				  });
 			</script>
-			<a class="btn btn-primary" type="button" href="../uploads/<%=id%>-4.pdf">Check Uploaded pdf</a>
+			<a class="btn btn-primary" type="button" href="../uploads/maths/<%=id%>-4.pdf">Check Uploaded pdf</a>
 
 		</div>
 
