--- a/views/morules.ejs
+++ b/views/morules.ejs
@@ -126,28 +126,21 @@
 	<div class="container" style="margin-top: 100px; color: white;">
 		<div class="container row">
 			<h2 align="center" style="margin-bottom: 25px;">Maths Olympiad - Round 1</h2>
-			<p style="display: inline; width: 50%;" align="left">Max Score: 100 points</p>
-			<p style="display: inline; width: 50%;" align="right">Test Duration: 150 min</p>
+			<p style="display: inline; width: 50%;" align="left">Max Score: 90 points</p>
+			<p style="display: inline; width: 50%;" align="right">Test Duration: 60 min</p>
 			<p><span style="text-decoration: underline;">Instructions</span> :</p> 
-			<p> •  Answer all the questions.</p>
-			<p> •  Answer all parts of a question together.</p>
-			<p> •  No question number before any solution will not be considered for
-				evaluation.</p>
-			<p> •  There will be no negative marking.</p>
+			<p> •  There are 30 questions in total and 3 sections in the question paper. All questions are compulsory.</p>
+			<p> •  The questions are objective in nature. Each will have a choice of four answers out of which ONLY ONE choice is correct.</p>
+			<p> •  The paper consists of questions based on logical reasoning, aptitude and Mathematical reasoning.</p>
+			<p> •  Each question carries 3 marks and there is NEGATIVE MARKING. -1 mark will be deducted for wrong answer. No marks will be deducted for unattempted questions.</p>
 			<p> •  Marking scheme for each part of every question is specified at end
 				of the question.</p>
-			<p> •  Answer very concisely for the theory questions.</p>
-			<p> •  In the schematic diagram of Lt-spice please write you Name before
-				you took screenshot and attach in the final report.</p>
-			<p> •  All the simulation graphs should be taken on a white background in
-				Lt-spice. Do not use black background while taking screenshots of
-				graphs at all.</p>
-			<p> •  In the circuit diagram please label all the required nodes.</p>
-			<p> •  Always plot different quantities of a question in different pane.</p>
-			<p> •  Please utilize the time properly. No extra time is provided and no
-				one is allowed to appear for the exam again.</p>
-			<p> •  You need to compile the solution of a question into a pdf (only pdf format is allowed) and upload it as a whole for each of the questions. </p>
-			<p> • Make sure you check all the submitted answers before ending the test</p>
+			<p> •  You need to write the answers of all questions, Scan and upload it in only pdf format.</p>
+			<p> •  No question number before any answer will not be considered for evaluation.</p>
+			<p> •  No extra time is provided and no one is allowed to appear for the exam again.</p>
+			<p> •  Keep an eye on the timer.</p>
+			<p> •  Make sure you check all the submitted answers before ending the test.</p>
+			
 
 
 			<form>
