--- a/views/motest.ejs
+++ b/views/motest.ejs
@@ -92,16 +92,575 @@
 	</header>
 
 	<div class="container" id="body" style="color: white; margin-top: 75px; margin-bottom: 25px;">
-        <form id="q1" enctype="multipart/form-data">
             <div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
                 <h4>Question No. 1</h4><br>
-                
-            </div>
+                Starting from noon, what is the angle swept by the hour hand of a clock when 
+				the time is 4:48 p.m.? (In Degrees)  <br>
+				<br>
+				A. 120 <br>
+				B. 144 <br>
+				C. 150 <br>
+				D. 160 <br>
+			
+			
+			</div>
 
-            <input type="hidden" name="wissid" value="<%=id%>">
-            <button type="submit" class="btn btn-primary">Submit test</button>
+			<br><br>
 
-        </form>
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 2</h4><br>
+                A solid cube has two of its opposite faces coloured black and rest four with
+				red. It is then cut into 81 smaller cubes. What is the ratio of cubes that have
+				(two faces coloured, one red and one black) : (two faces coloured, both red) :
+				(one face coloured black) <br>
+				<br>
+				A. 1:1:7 <br>
+				B. 2:2:7 <br>
+				C. 1:2:7 <br>
+				D. 2:4:7 <br>
+			
+			
+			</div>
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 3</h4><br>
+                A clock is set right at 6:00 a.m. It gets ahead by 2 minutes in every 90 minutes
+				(with respect to correct time frame). What is the time shown in the clock on
+				the third day when actual time is 7:30 p.m.?<br>
+				<br>
+				A. 8:42 p.m. <br>
+				B. 8:40 p.m. <br>
+				C. 8:38 p.m. <br>
+				D. 8:36 p.m <br>
+			
+			
+			</div>
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 4</h4><br>
+                Answering to variety of balls in his bag, a boy says all are red but eight, all are
+blue but three and all are green but five. How many red balls are present in the
+bag?<br>
+				<br>
+				A. 6 <br>
+				B. 5 <br>
+				C. 11 <br>
+				D. No red balls <br>
+			
+			
+			</div>
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 5</h4><br>
+                Monday falls on 4th April 1998. What was the day 3rd November 1987?<br>
+				<br>
+				A. Monday  <br>
+				B. Sunday  <br>
+				C. Tuesday <br>
+				D. Wednesday <br>
+			
+			
+			</div>
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 6</h4><br>
+                In a certain code “MOUSE” is written as “PRUQC”. How is “SHIFT” written in
+that code?
+<br>
+				<br>
+				A. VKIDR <br>
+				B. VJIDR <br>
+				C. VIKRD <br>
+				D. RKIVD <br>
+			
+			
+			</div>
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 7</h4><br>
+                Some equations are solved based on a certain system. On the same basis find
+				out the correct answer for unsolved equation on that basis:  <br>
+				41-27+34=201 <br>
+				19-63+48=031 <br>
+				51-35+63=? 
+				<br>
+				<br>
+				A. 79 <br>
+				B. 914 <br>
+				C. 149 <br>
+				D. 941 <br>
+			
+			
+			</div>
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 8</h4><br>
+                In a row at bus-stop, ’A’ is 7th from the left and ‘B’ is 9th from the right. They
+both interchange their positions. Now A becomes 11th from the left. How many
+people are there in a row?  
+				<br>
+				<br>
+				A. 10 <br>
+				B. 20 <br>
+				C. 19 <br>
+				D. 18 <br>
+
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 9</h4><br>
+				Find the odd one out. 
+				<br>
+				<br>
+				A. UZDGI <br>
+				B. JOSVX <br>
+				C. RWACE <br>
+				D. FKORT <br>
+
+							
+			</div>
+							
+			</div>
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 10</h4><br>
+                If ‘P’ denotes ‘multiplied by’, ’T’ denotes ‘subtracted from’ , ’M’ denotes
+‘added to’ and ‘B’ denotes ‘divided by’ then: What should be the correct
+response of 12 P 6 M 15 T 16 B 4?  
+				<br>
+				<br>
+				A. 70  <br>
+				B. 83  <br>
+				C. 75  <br>
+				D. 110 <br>
+
+			</div>
+
+
+			<h3><u>Mathematical Reasoning</u></h3>
+
+			<br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 11</h4><br>
+                Krishna has exams for 12 subjects. Overall, to succeed he must pass in a
+greater number of subjects than the subjects he fails. In how many ways can
+he fail?
+				<br>
+				<br>
+				A. 1586 <br>
+				B. 1585 <br>
+				C. 2509 <br>
+				D. 2510 <br>
+
+			</div>
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 12</h4><br>
+                The locus of middle points of a system of parallel chords of a parabola y^2 =
+4ax, if m is the slope of parallel chords is,
+
+				<br>
+				<br>
+				A. y = m/2a <br>
+				B. y = 2m/a <br>
+				C. y = a/2m <br>
+				D. y = 2a/m <br>
+
+			</div>
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 13</h4><br>
+                .The coefficients of three consecutive terms of (1+x)<sup>(n+5)</sup> are in the ratio 5:10:14.
+Then n = 
+
+				<br>
+				<br>
+				A. 6 <br>
+				B. 8 <br>
+				C. 5 <br>
+				D. 7 <br>
+
+			</div>
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 14</h4><br>
+                The maximum volume of a right circular cone having slant height 3m is
+
+				<br>
+				<br>
+				A. 3 𝜋√3 <br>
+				B. 2 𝜋√3 <br>
+				C. 3 𝜋 <br>
+				D. (4/3) 𝜋 <br>
+ 
+			</div>
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 15</h4><br>
+                The sum of the coefficients of all the even powers of x in the expansion of (2x<sup>3</sup>– 3x +1)<sup>11</sup>
+
+				<br>
+				<br>
+				A. 2.6<sup>10</sup> <br>
+				B. 3.6<sup>10</sup> <br>
+				C. 6<sup>10</sup> <br>
+				D. 6<sup>11</sup> <br>
+ 
+			</div>
+
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 16</h4><br>
+                Number of values of n for which,
+                <sup>22</sup>C<sub>n-2</sub> + 2.<sup>22</sup>C<sub>n-1</sub> + <sup>22</sup>C<sub>n</sub> ≥ <sup>24</sup>C<sub>18</sub>
+
+				<br>
+				<br>
+				A. 12  <br>
+				B. 13  <br>
+				C. 14  <br>
+				D. 15  <br>
+
+			</div>
+
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 17</h4><br>
+                Two vessels contain a mixture of spirit and water. In the first vessel the ratio of
+spirit to water is 8:3 and in the second vessel the ratio is 5:1. A 35-litre cask is
+filled from these vessels to contain a mixture of spirit and water in the ratio of
+4:1. How many liters are taken from the first vessel?
+
+				<br>
+				<br>
+				A. 11 litres  <br>
+				B. 22 litres  <br>
+				C. 16.5 litres <br>
+				D. 17.5 litres <br>
+				
+			</div>
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 17</h4><br>
+                Two vessels contain a mixture of spirit and water. In the first vessel the ratio of
+spirit to water is 8:3 and in the second vessel the ratio is 5:1. A 35-litre cask is
+filled from these vessels to contain a mixture of spirit and water in the ratio of
+4:1. How many liters are taken from the first vessel?
+
+				<br>
+				<br>
+				A. 11 litres  <br>
+				B. 22 litres  <br>
+				C. 16.5 litres <br>
+				D. 17.5 litres <br>
+				
+			</div>
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 18</h4><br>
+                The price of raw materials has gone up by 15%, labour cost has also increased
+from 25% of the cost of raw material to 30% of the cost of raw material. By
+how much percentage should there be a reduction in the usage of raw
+materials to keep the cost same?
+
+
+				<br>
+				<br>
+				A. 24%  <br>
+				B. 28%  <br>
+				C. 17%  <br>
+				D. 25%  <br>
+
+				
+			</div>
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 19</h4><br>
+                A sold a table to B at a profit of 20%. B sold the same table to C for Rs.75
+thereby making a profit of 25%. Find the price at which A bought the table
+from X if it is known that X gained 25% in the transaction?
+
+
+				<br>
+				<br>
+				A. Rs.30  <br>
+				B. Rs.40  <br>
+				C. Rs.50  <br>
+				D. Rs.60  <br>
+
+				
+			</div>
+
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 20</h4><br>
+                A cone, a hemisphere and a cylinder stand on equal bases and have the same
+height. What is the ratio of their volumes?
+				<br>
+				<br>
+				A. 2:1:3  <br>
+				B. 25:1:3 <br>
+				C. 1.5:2:3<br>
+				D. 1:2:3  <br>
+				
+			</div>
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 21</h4><br>
+                How many numbers are there between 100 and 1000, which have exactly one
+of their digits are 8?
+				<br>
+				<br>
+				A. 300  <br>
+				B. 1444 <br>
+				C. 225  <br>
+				D. 729  <br>
+				
+			</div>
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 22</h4><br>
+                Given x, y and z are three real numbers which satisfies the three conditions: (x
++y +z=10), (x<sup>2</sup>+ y<sup>2</sup>+ z<sup>2</sup>=62) and (x<sup>3</sup>+y<sup>3</sup>+z<sup>3</sup>=340). Find the value of (x<sup>4</sup>+y<sup>4</sup>+z<sup>4</sup>)?
+				<br>
+				<br>
+				A. 300  <br>
+				B. 1444 <br>
+				C. 225  <br>
+				D. 729  <br>
+				
+			</div>
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 23</h4><br>
+                Given that ‘a’ and ‘b’ are positive real numbers such that a + b = 1, then what is the minimum value of √(12+1/a<sup>2</sup>) +√ (12+1/b<sup>2</sup>)?
+				<br>
+				<br>
+				A. 300  <br>
+				B. 1444 <br>
+				C. 225  <br>
+				D. 729  <br>
+				
+			</div>
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 24</h4><br>
+				Find the no. of zeroes in (100<sup>1</sup> * 99<sup>2</sup>* 98<sup>3</sup>* 97<sup>4</sup> *96<sup>5</sup> *......*1<sup>100</sup>)?				<br>
+				<br>
+				A. 970  <br>
+				B. 1070 <br>
+				C. 1120 <br>
+				D. 1124 <br>
+				
+			</div>
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 25</h4><br>
+				The number of rational points x=(p/5) satisfying [{log(2x−0.75)}/logx] >2, where p is an
+integer and gcd (p,5) =1 is?
+				<br>
+				<br>
+				A. 2 <br>
+				B. 3 <br>
+				C. 5 <br>
+				D. 1 <br>
+				
+			</div>
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 26</h4><br>
+				Consider the set T<sub>x</sub>= (x, x+1, x+2, x+3, x+4, x+5). For x=1,2,3,4---999 How many
+of these sets do not contain any 7 or any integral multiple of 7?
+
+				<br>
+				<br>
+				A. 121 <br>
+				B. 143 <br>
+				C. 144 <br>
+				D. 145 <br>
+				
+			</div>
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 27</h4><br>
+				For what values of the parameter a does the equation x<sup>4</sup> + 2ax<sup>3</sup> + x<sup>2</sup> + 2ax + 1 =
+0 has at least two distinct negative roots?
+
+				<br>
+				<br>
+				A. (0, ∞) <br>
+				B. (1/2, ∞)<br>
+				C. (1/4, ∞)<br>
+				D. (3/4, ∞)<br>
+				
+			</div>
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 28</h4><br>
+				An infinite rod is hinged at the focus of the parabola y<sup>2</sup> = 4x so that it can
+rotate freely about the focus. The only impediment to its rotation is the
+parabola x<sup>2</sup> = 4(y - 1). What is the maximum angle through which it can rotate?
+				<br>
+				<br>
+
+				A. 80<sup>o</sup> <br>
+				B. 90<sup>o</sup> <br>
+				C. 100<sup>o</sup> <br>
+				D. 270<sup>o</sup> <br>
+
+			</div>	
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 29</h4><br>
+				Length of the curved line traced by the point represented by z, when arg (𝑧−1/𝑧+1) = 𝜋/4 is
+				<br><br>
+
+				A. 2𝜋√2 <br>
+				B. 𝜋√2 <br>
+				C. 𝜋/√2 <br>
+				D. 𝑁𝑜𝑛e <br>
+
+				
+			</div>
+
+
+			<br><br>
+
+			<div style="padding: 20px; border: 1.5px solid white; border-radius: 15px;">
+                <h4>Question No. 30</h4><br>
+				|Z1| = 1, |Z2| = 2, |Z3| = 3 and |9Z1 Z2 + 4Z1 Z3 + Z2 Z3| = 12. Then, |Z1 + Z2 + Z3|
+is
+
+				<br><br>
+
+				A. 3 <br>
+				B. 2 <br>
+				C. 6 <br>
+				D. 1 <br>
+
+				
+			</div>
+
+            <form id="q" enctype="multipart/form-data">
+				<input id="sub" type="file"  name="file">
+				<input type="hidden" name="wissid" value="<%=id%>">
+				<button type="submit" class="btn btn-primary">Choose a file and Submit</button>
+			</form>
+			<script>
+				$("#q").submit(function(e) {
+					e.preventDefault(); 
+					console.log('insert clicked');
+					var image_name = $('#sub').val();
+					if(image_name== ''){
+						console.log('no name');
+						new swal({
+							title : 'No file', 
+							text: 'Please select a file', 
+							icon: 'error'
+						})
+						return false;
+					}
+					else{
+						var extension = $('#sub').val().split('.').pop().toLowerCase();
+							if(jQuery.inArray(extension, ['pdf']) == -1){
+								new swal({
+									title : 'Wrong Extension', 
+									text: 'Please upload a pdf file', 
+									icon: 'error'
+								})
+								console.log('extension wrong');
+								$('#sub').val('');
+								return false;
+							}
+						}
+					var formData = new FormData(this);
+					console.log('uploading');
+
+					$.ajax({
+						type: "POST",
+						url: '/maths/submission',
+						data: formData, 
+						cache: false,
+						contentType: false,
+						processData: false,
+						success: function(result)
+						{
+							if(result == 'success'){
+								new swal({
+									title: 'Success',
+									text: 'Submitted Successfully',
+									icon: 'success'
+								});
+							}
+							
+							else {
+								new swal({
+									title: 'Error',
+									text: 'err',
+									icon: 'error'
+								});
+								console.log(result)
+							}
+						}
+					});
+				  });
+			</script>
+			<a class="btn btn-primary" type="button" href="../uploads/maths/<%=id%>.pdf">Check Uploaded pdf</a>
+
 	</div>
 
 
