--- a/views/morules.ejs
+++ b/views/morules.ejs
@@ -151,11 +151,11 @@
 					</label>
 				</div>
 				<br>
-				<!-- <button type="submit" style="display:block; margin:auto;" id="submit" class="btn btn-dark">Proceed to the exam</button> -->
+				<button type="submit" style="display:block; margin:auto;" id="submit" class="btn btn-dark">Proceed to the exam</button>
 
-				<button style="display:block; margin:auto;" class="btn btn-danger">Not Started</button>
+				<!-- <button style="display:block; margin:auto;" class="btn btn-danger">Not Started</button> -->
 			</form>	
-			<!-- <script>
+			<script>
 				$("form").submit(function(e) {
 				  e.preventDefault(); 
 				  console.log('start exam');
@@ -181,7 +181,7 @@
 						});
 					})				  
 				});
-			</script> -->
+			</script>
 		</div>
 	</div>
 
