--- a/views/morules.ejs
+++ b/views/morules.ejs
@@ -140,6 +140,7 @@
 			<p> •  No extra time is provided and no one is allowed to appear for the exam again.</p>
 			<p> •  Keep an eye on the timer.</p>
 			<p> •  Make sure you check all the submitted answers before ending the test.</p>
+			<p> •  You can find the option to upload at the end of the question paper.</p>
 			
 
 
